Fix some routes.
